# EnsembleMDP

./: README.md  pyproject.toml  requirement.txt
scripts/: backmapping_IDRome.py
src/EnsembleMDP/analysis/: checker.py  global_properties.py  io_utils.py  local_properties.py  orchestrator.py  utils.py
src/EnsembleMDP/backmapping/: backmapper.py  utils.py
